[tool.poetry]
name = "da9"
version = "1"
description = ""
authors = ["N"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
exclude = '''
(
    __pycache__
)
'''

[tool.flake8]
max-line-length = 79
extend-exclude = '__pycache__'

[tool.isort]
skip = '__pycache__'